<resources>
    <string name="app_name" translatable="false">LessonCountdown</string>
    <string name="dev"><a href="https://vk.com/dibrin">Developer page in VK</a></string>
    <string name="appVk"><a href="https://vk.com/brin_apps">LessonCountdown group in VK</a></string>
    <string name="whitespace" translatable="false"> </string>
    <string name="help">Help</string>
    <string name="networkErr">Server is unreachable</string>
    <string name="configErr">Wrong config</string>
    <string name="timeErr">The xxx time entry field should look like: Hours:Minutes-Hours:Minutes</string>
    <string name="lessonErr">The xxx lesson entry field is blank</string>
    <string name="indexErr">You entered a number more than possible</string>
    <string name="notNumErr">You entered not a number</string>
    <string name="editMode">Edit mode</string>
    <string name="lesson">Lesson</string>
    <string name="time">Time</string>
    <string name="add">Add</string>
    <string name="addIndex">Add after:</string>
    <string name="remove">Remove</string>
    <string name="removeIndex">Remove:</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="homework">Homework</string>
    <string name="on">Service online</string>
    <string name="off">Service offline</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="settings">Settings</string>
    <string name="customCfg">Custom Config (Disables auto-download)</string>
    <string name="chooseClass">Choose class</string>
    <string name="searchClass">Search class</string>
    <string name="ownServer">Set own server address</string>
    <string name="address">Address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dowTitle">Days of the week</string>
    <string-array name="days">
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>
    <string-array name="modes">
        <item>@string/alarmManagerMode</item>
        <item>@string/workManagerMode</item>
        <item>@string/serviceClassMode</item>
    </string-array>
    <string name="serviceClassMode">Service mode</string>
    <string name="alarmManagerMode">AlarmManager mode</string>
    <string name="workManagerMode">WorkManager mode</string>
    <string name="notificationColor">Custom notification colors</string>
    <string name="titleColor">Color of the lesson</string>
    <string name="timeColor">Time color</string>
    <string name="lessonsColor">Counter color</string>
    <string name="backgroundColor">Background color</string>
    <string name="host" translatable="false">lcsrv.eugw.ru</string>
    <string name="copyTo">Copy config to clipboard</string>
    <string name="pasteFrom">Paste config from clipboard</string>
    <string name="pasteErr">Could not parse config from clipboard</string>
    <string name="lessonsRemaining">Lessons remaining</string>
    <string name="cpv_select">Select</string>
    <string name="hideEditionControls">Hide edition mode controls</string>
    <string name="enableEvenOddWeeks">Enable even/odd weeks</string>
    <string name="inverseEvenOddWeeks">Inverse even/odd weeks</string>
    <string name="utilities">Utilities</string>
    <string name="patches">Patches (Soon)</string>
    <string name="kundelik">Kundelik</string>
    <string name="download">Download schedule</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="resetLogin">Reset login</string>
    <string name="newMark">New mark</string>
    <string name="regNoti">Register for receiving new marks notification</string>
    <string name="unregNoti">Unregister for receiving new marks notification</string>
    <string name="onMarkDate">on</string>
    <string name="marksLastList">Last marks for 30 days</string>
    <string name="unsupportedRole">Unsupported role</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="requestPolicyAccept">To use my application you must accept <a href="http://lessoncountdown.brin.pw/privacy_policy.html">the privacy policy</a> and <a href="http://lessoncountdown.brin.pw/terms_and_conditions.html">terms and conditions.</a></string>
    <string name="helpPrivacyPolicy"><a href="http://lessoncountdown.brin.pw/privacy_policy.html">Privacy Policy</a></string>
    <string name="helpTermsAndConditions"><a href="http://lessoncountdown.brin.pw/terms_and_conditions.html">Terms and Conditions</a></string>
    <string name="enableLocalMarksService">Enable local marks listener service</string>
    <string name="set">Set</string>
    <string name="delay">Delay (in minutes >= 15)</string>
    <string name="selectMode">Select mode</string>
    <string name="lastCheck">Last check:</string>
</resources>
