<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuMonday"
        android:title="@string/monday" />
    <item
        android:id="@+id/menuTuesday"
        android:title="@string/tuesday" />
    <item
        android:id="@+id/menuWednesday"
        android:title="@string/wednesday" />
    <item
        android:id="@+id/menuThursday"
        android:title="@string/thursday" />
    <item
        android:id="@+id/menuFriday"
        android:title="@string/friday" />
    <item
        android:id="@+id/menuSaturday"
        android:title="@string/saturday" />
    <item
        android:id="@+id/menuSettings"
        android:title="@string/settings" />
    <item
        android:id="@+id/menuAbout"
        android:title="@string/about" />

</menu>