<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuEvenOdd"
        android:title="@string/whitespace"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuAdd"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menuRemove"
        android:icon="@drawable/ic_remove"
        android:title="@string/remove"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/ic_mode_edit"
        android:title="@string/editMode"
        app:showAsAction="always" />
</menu>